[build-system]
requires = [ "setuptools>=41.0.1", "wheel>=0.37.1",]

[tool.mypy]
ignore_missing_imports = true

[tool.xcookie]
tags = [ "github", "erotemic", "purepy", "cv2", "notypes" ]
mod_name = "guitool_ibeis"
repo_name = "guitool_ibeis"
description = "Guitool - tools for PyQt5 guis"
url="https://github.com/Erotemic/guitool_ibeis"
author="Jon Crall"
version = "{mod_dpath}/__init__.py::__version__"
author_email="erotemic@gmail.com"
license = "Apache 2"
dev_status = "beta"
min_python = 3.7
# ci_cpython_versions = ["3.7", "3.8", "3.9", "3.10"]
supported_python_versions = ["3.7", "3.8", "3.9", "3.10"]
ci_pypy_versions = []
autostage = true
os = [ "linux" ]

[tool.pytest.ini_options]
addopts = "-p no:doctest --xdoctest --xdoctest-style=google --ignore-glob=setup.py"
norecursedirs = ".git ignore build __pycache__ dev _skbuild"
filterwarnings = [ "default", "ignore:.*No cfgstr given in Cacher constructor or call.*:Warning", "ignore:.*Define the __nice__ method for.*:Warning", "ignore:.*private pytest class or function.*:Warning",]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", ".*  # pragma: no cover", ".*  # nocover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if 0:", "if trace is not None", "verbose = .*", "^ *raise", "^ *pass *$", "if _debug:", "if __name__ == .__main__.:", ".*if six.PY2:",]
omit = [ "guitool_ibeis/__main__.py", "*/setup.py",]
